--- a/game.html
+++ b/game.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/weapons.css">
+<link rel="stylesheet" type="text/css" href="weapons.css">
 <canvas id="js3d-landscape-canvas" style="width:100%; height:100%;">
 </canvas>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
